modify team.html - add section team

--- a/team.html
+++ b/team.html
@@ -118,18 +118,20 @@
                                     <div class="person">
                                         <div class="person__img">
                                             <img src="img/team/Alex.png" alt="Белов Алексей Вадимович" class="person__img-content">
+                                            <span class="person__img-title">Алексей</span>
                                         </div>
-                                        <div class="person__name">
+                                        <!-- </div> -->
+                                        <h3 class="person__header">
                                             Белов Алексей Вадимович
-                                        </div>
+                                        </h3>
                                         <div class="person__profession">
                                             Главный пилот
                                         </div>
-                                        <div class="person__description">
+                                        <p class="person__description">
                                             Высокий профессионализм, честь отвага - все это характеристики главного
                                             пилота Белова А.В. На его счету более 700 полетов. Награжден за мужество и
                                             отвагу указом президента.
-                                        </div>
+                                        </p>
                                     </div>
                                 </li>
                                 <!-- end 1 person -->
@@ -138,19 +140,20 @@
                                     <div class="person">
                                         <div class="person__img">
                                             <img src="img/team/Inna.png" alt="Сухарина Инна Николаевна" class="person__img-content">
+                                            <span class="person__img-title">Инна</span>
                                         </div>
-                                        <div class="person__name">
+                                        <h3 class="person__header">
                                             Сухарина Инна Николаевна
-                                        </div>
+                                        </h3>
                                         <div class="person__profession">
                                             Бортпроводник
                                         </div>
-                                        <div class="person__description">
+                                        <p class="person__description">
                                             Благодаря деятельности этого человека, на борту самолета клиенты чувствуют
                                             себя, как дома. Инна Николаевна чутко относится ко всем требованиям
                                             клиентов, очень любит детей и всячески помогает сделать полет комфортным и
                                             приятным.
-                                        </div>
+                                        </p>
                                     </div>
                                 </li>
                                 <!-- end 2 person -->
@@ -159,21 +162,93 @@
                                     <div class="person">
                                         <div class="person__img">
                                             <img src="img/team/Boris.png" alt="Лещ Борис Анатольевич" class="person__img-content">
+                                            <span class="person__img-title">Борис</span>
                                         </div>
-                                        <div class="person__name">
+                                        <h3 class="person__header">
                                             Лещ Борис Анатольевич
-                                        </div>
+                                        </h3>
                                         <div class="person__profession">
                                             Авиатехник
                                         </div>
-                                        <div class="person__description">
+                                        <p class="person__description">
                                             Человек с золотыми руками, инженер и конструктор от Бога! Борис Анатольевич
                                             работает уже более 50 лет и на своем веку видел, как из старых моделей
                                             самолетов появились настоящие авиа шедевры.
-                                        </div>
+                                        </p>
                                     </div>
                                 </li>
                                 <!-- end 3 person -->
+                            </ul>
+                        </section>
+                        <section class="team team--bottom">
+                            <ul class="team__list-top">
+                                <!-- start 1 person bottom -->
+                                <li class="team__list-top-item">
+                                    <div class="person">
+                                        <div class="person__img">
+                                            <img src="img/team/Elina.png" alt="Дигангидзе Элина Даниловна" class="person__img-content">
+                                            <span class="person__img-title">Элина</span>
+                                        </div>
+                                        <!-- </div> -->
+                                        <h3 class="person__header">
+                                            Дигангидзе Элина Даниловна
+                                        </h3>
+                                        <div class="person__profession">
+                                            Диспетчер
+                                        </div>
+                                        <p class="person__description">
+                                            Ей присущ внимательный подход к расчетам, а отменная память удивляет даже
+                                            самых опытных членов экипажа. За 22 года работы она стажировала более 100
+                                            диспетчеров для работы в крупнейших аэропортах страны. Знает в совершенстве
+                                            5 иностранных языков.
+                                        </p>
+                                    </div>
+                                </li>
+                                <!-- end 1 person bottom -->
+                                <!-- start 2 person bottom -->
+                                <li class="team__list-top-item">
+                                    <div class="person">
+                                        <div class="person__img">
+                                            <img src="img/team/Elena.png" alt="Следь Елена Николаевна" class="person__img-content">
+                                            <span class="person__img-title">Елена</span>
+                                        </div>
+                                        <h3 class="person__header">
+                                            Следь Елена Николаевна
+                                        </h3>
+                                        <div class="person__profession">
+                                            Страший бортпроводник
+                                        </div>
+                                        <p class="person__description">
+                                            Вежливая улыбка, внимательность к деталям и большой опыт работы - это лишь
+                                            малая часть достоинств Елены Николаевны. Старший бортпроводник задает тон
+                                            всей поездке, поэтому клиенты, которые летят с ней, заряжаются отличным
+                                            настроением и гармонией.
+                                        </p>
+                                    </div>
+                                </li>
+                                <!-- end 2 person bottom -->
+                                <!-- start 3 person bottom -->
+                                <li class="team__list-top-item">
+                                    <div class="person">
+                                        <div class="person__img">
+                                            <img src="img/team/Yrii.png" alt="Нестеренко Юрий Афанасьевич" class="person__img-content">
+                                            <span class="person__img-title">Юрий</span>
+                                        </div>
+                                        <h3 class="person__header">
+                                            Нестеренко Юрий Афанасьевич
+                                        </h3>
+                                        <div class="person__profession">
+                                            Второй пилот
+                                        </div>
+                                        <p class="person__description">
+                                            Правая рука главного пилота, опытный и отважный помощник. О своей работе в
+                                            шутку говорит так "Наше дело правое, не мешать левому". Опыт работы
+                                            составляет 18 лет, внимательно относится ко всем деталям и считает свою
+                                            работу - делом жизни.
+                                        </p>
+                                    </div>
+                                </li>
+                                <!-- end 3 person bottom -->
                             </ul>
                         </section>
                         <!-- end team -->
