rename modificators in header, footer, maincontent (index.html, comments.html, team.html)

--- a/team.html
+++ b/team.html
@@ -25,7 +25,7 @@
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
-                <div class="container header--container">
+                <div class="container container--header">
                     <!-- start header left -->
                     <div class="header__left">
                         <div class="logo header__logo">
@@ -60,7 +60,7 @@
             <!-- start maincontent -->
             <div class="maincontent">
                 <!-- start container -->
-                <div class="container maincontent__container">
+                <div class="container container--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
                         <nav class="navigation">
@@ -276,7 +276,7 @@
                                         <img src="img/logotypes/oneair.png" alt="партнер" class="partners__img">
                                     </li>
                                     <li class="partners__item">
-                                        <img src="img/logotypes/Vector Smart Object (3).png" alt="партнер" class="partners__img">
+                                        <img src="img/logotypes/bingair.png" alt="партнер" class="partners__img">
                                     </li>
                                     <li class="partners__item">
                                         <img src="img/logotypes/ural.png" alt="партнер" class="partners__img">
@@ -298,7 +298,7 @@
         <!-- start footer -->
         <footer class="footer">
             <!-- start container -->
-            <div class="container footer--container">
+            <div class="container container--footer">
                 <!-- start signature -->
                 <div class="footer__left">
                     Сделано с любовью и старанием
