--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
-                <div class="container header--container">
+                <div class="container container--header">
                     <!-- start header left -->
                     <div class="header__left">
                         <div class="logo header__logo">
@@ -58,7 +58,7 @@
             <!-- start maincontent -->
             <div class="maincontent">
                 <!-- start container -->
-                <div class="container maincontent__container">
+                <div class="container сontainer--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
                         <nav class="navigation">
@@ -327,7 +327,7 @@
         <!-- start footer -->
         <footer class="footer">
             <!-- start container -->
-            <div class="container footer--container">
+            <div class="container container--footer">
                 <!-- start signature -->
                 <div class="footer__left">
                     Сделано с любовью и старанием
