--- a/comments.html
+++ b/comments.html
@@ -300,7 +300,7 @@
                                 <label><input type="radio" name="1"> Нет</label>
                             </div>
                             <div class="new-comment__form-column-bottom-right">
-                                <button type="button" class="new-comment__form-button">
+                                <button type="submit" class="new-comment__form-button">
                                     <span class="new-comment__form-button-text">
                                         отправить
                                     </span>
