add alt for partners img (team.html)

--- a/team.html
+++ b/team.html
@@ -272,26 +272,26 @@
                             <!-- start line 1 -->
                             <ul class="partners__list">
                                 <li class="partners__item">
-                                    <img src="img/logotypes/bmp.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/bmp.png" alt="партнер BMP Company" class="partners__img">
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/tetra.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/tetra.png" alt="партнер Tetra Install" class="partners__img">
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/sibirian.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/sibirian.png" alt="партнер Сибирские Авиалинии" class="partners__img">
                                 </li>
                             </ul>
                             <!-- end line 1 -->
                             <!-- start line 2 -->
                             <ul class="partners__list partners__list--bottom">
                                 <li class="partners__item">
-                                    <img src="img/logotypes/oneair.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/oneair.png" alt="партнер One Air" class="partners__img">
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/bingair.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/bingair.png" alt="партнер Bing Air" class="partners__img">
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/ural.png" alt="партнер" class="partners__img">
+                                    <img src="img/logotypes/ural.png" alt="партнер Урал" class="partners__img">
                                 </li>
                             </ul>
                             <!-- end line 2 -->
