add partners link (team.html)

--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
     <!-- start wrapper -->
     <div class="wrapper">
         <!-- start wrapper content -->
-        <div class="wrapper__content">
+        <a class="wrapper__content">
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
@@ -272,26 +272,38 @@
                             <!-- start line 1 -->
                             <ul class="partners__list">
                                 <li class="partners__item">
-                                    <img src="img/logotypes/bmp.png" alt="партнер BMP Company" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/bmp.png" alt="партнер BMP Company" class="partners__img">
+                                    </a>
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/tetra.png" alt="партнер Tetra Install" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/tetra.png" alt="партнер Tetra Install" class="partners__img">
+                                    </a>
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/sibirian.png" alt="партнер Сибирские Авиалинии" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/sibirian.png" alt="партнер Сибирские Авиалинии" class="partners__img">
+                                    </a>
                                 </li>
                             </ul>
                             <!-- end line 1 -->
                             <!-- start line 2 -->
                             <ul class="partners__list partners__list--bottom">
                                 <li class="partners__item">
-                                    <img src="img/logotypes/oneair.png" alt="партнер One Air" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/oneair.png" alt="партнер One Air" class="partners__img">
+                                    </a>
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/bingair.png" alt="партнер Bing Air" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/bingair.png" alt="партнер Bing Air" class="partners__img">
+                                    </a>
                                 </li>
                                 <li class="partners__item">
-                                    <img src="img/logotypes/ural.png" alt="партнер Урал" class="partners__img">
+                                    <a href="#" class="partners__link">
+                                        <img src="img/logotypes/ural.png" alt="партнер Урал" class="partners__img">
+                                    </a>
                                 </li>
                             </ul>
                             <!-- end line 2 -->
@@ -305,69 +317,69 @@
             </div>
             <!-- end maincontent -->
 
-        </div>
-        <!-- end wrapper content -->
-        <!-- start footer -->
-        <footer class="footer">
-            <!-- start container -->
-            <div class="container container--footer">
-                <!-- start signature -->
-                <div class="footer__left">
-                    Сделано с любовью и старанием
-                    на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
-                    Автор работы: <span class="bold">Глушенков Антон</span>
-                </div>
-                <!-- end signature -->
-                <!-- start logo -->
-                <div class="logo footer__logo">
-                    <a href="about.html" title="тарифы компании" class="logo__link">
-                        <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
-                    </a>
-                </div>
-                <!-- end logo -->
-                <!-- start social network -->
-                <div class="footer__right">
-                    <!-- start social text -->
-                    <div class="footer__right-text">
-                        Наши социальные сети
-                    </div>
-                    <!-- end social text -->
-                    <!-- start social  -->
-                    <div class="footer__social">
-                        <ul class="social-list">
-                            <li class="social-item">
-                                <a href="#" class="social-link">
-                                    <div class="social-icon social-icon--vk"></div>
-                                </a>
-                            </li>
-                            <li class="social-item">
-                                <a href="#" class="social-link">
-                                    <div class="social-icon social-icon--fb"></div>
-                                </a>
-                            </li>
-                            <li class="social-item">
-                                <a href="#" class="social-link">
-                                    <div class="social-icon social-icon--google"></div>
-                                </a>
-                            </li>
-                            <li class="social-item">
-                                <a href="#" class="social-link">
-                                    <div class="social-icon social-icon--twitter"></div>
-                                </a>
-                            </li>
-                            <li class="social-item">
-                                <a href="mailto:example@mail.ru" class="social-link">
-                                    <div class="social-icon social-icon--mail"></div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- end social  -->
-                </div>
-                <!-- end container -->
+    </div>
+    <!-- end wrapper content -->
+    <!-- start footer -->
+    <footer class="footer">
+        <!-- start container -->
+        <div class="container container--footer">
+            <!-- start signature -->
+            <div class="footer__left">
+                Сделано с любовью и старанием
+                на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
+                Автор работы: <span class="bold">Глушенков Антон</span>
             </div>
-        </footer>
-        <!-- end footer -->
+            <!-- end signature -->
+            <!-- start logo -->
+            <div class="logo footer__logo">
+                <a href="about.html" title="тарифы компании" class="logo__link">
+                    <img src="img/logotypes/logo.png" alt="логотип компании" class="logo__img">
+                </a>
+            </div>
+            <!-- end logo -->
+            <!-- start social network -->
+            <div class="footer__right">
+                <!-- start social text -->
+                <div class="footer__right-text">
+                    Наши социальные сети
+                </div>
+                <!-- end social text -->
+                <!-- start social  -->
+                <div class="footer__social">
+                    <ul class="social-list">
+                        <li class="social-item">
+                            <a href="#" class="social-link">
+                                <div class="social-icon social-icon--vk"></div>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" class="social-link">
+                                <div class="social-icon social-icon--fb"></div>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" class="social-link">
+                                <div class="social-icon social-icon--google"></div>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" class="social-link">
+                                <div class="social-icon social-icon--twitter"></div>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="mailto:example@mail.ru" class="social-link">
+                                <div class="social-icon social-icon--mail"></div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- end social  -->
+            </div>
+            <!-- end container -->
+        </div>
+    </footer>
+    <!-- end footer -->
     </div>
     <!-- end wrapper -->
 
