add link in footer__left (all html)

--- a/comments.html
+++ b/comments.html
@@ -277,20 +277,21 @@
                         <div class="new-comment__form-column-top">
                             <div class="new-comment__form-column-top new-comment__form-column-top--left">
                                 <label for="new-comment__text">Ваше имя
-                                <input type="text" id="new-comment__text" class="new-comment__text" placeholder="Андрей">
-                            </label>
+                                    <input type="text" id="new-comment__text" class="new-comment__text" placeholder="Андрей">
+                                </label>
                             </div>
                             <div class="new-comment__form-column-top new-comment__form-column-top--right">
                                 <label for="new-comment__link">Ссылка на профиль VK
-                                <input type="text" id="new-comment__link" class="new-comment__link" placeholder="vk.com">
-                            </label>
+                                    <input type="text" id="new-comment__link" class="new-comment__link" placeholder="vk.com">
+                                </label>
                             </div>
                         </div>
                         <div class="new-comment__form-column-center">
                             <label for="new-comment__textarea">Текст отзыва
-                            <br>
-                            <textarea name="form" id="new-comment__textarea" class="new-comment__textarea" placeholder="Введите сообщение"></textarea>
-                       </label>
+                                <br>
+                                <textarea name="form" id="new-comment__textarea" class="new-comment__textarea"
+                                    placeholder="Введите сообщение"></textarea>
+                            </label>
                         </div>
                         <div class="new-comment__form-column-bottom">
                             <div class="new-comment__form-column-bottom-left">
@@ -322,8 +323,8 @@
                 <!-- start signature -->
                 <div class="footer__left">
                     Сделано с любовью и старанием
-                    на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
-                    Автор работы: <span class="bold">Глушенков Антон</span>
+                    на курсе "HTML + CSS" в <a href="https://loftschool.com" class="footer__left-link"><span class="bold">LoftSchool</span></a>.
+                    Автор работы: <a href="#" class="footer__left-link"><span class="bold">Глушенков Антон</span></a>
                 </div>
                 <!-- end signature -->
                 <!-- start logo -->
