--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                 <!-- start signature -->
                 <div class="footer__left">
                     Сделано с любовью и старанием
-                    на курсе "HTML + CSS" в <span class="bold">LoftSchool</span>.
-                    Автор работы: <span class="bold">Глушенков Антон</span>
+                    на курсе "HTML + CSS" в <a href="https://loftschool.com" class="footer__left-link"><span class="bold">LoftSchool</span></a>.
+                    Автор работы: <a href="#" class="footer__left-link"><span class="bold">Глушенков Антон</span></a>
                 </div>
                 <!-- end signature -->
                 <!-- start logo -->
