remake form new comments (comments.html)

--- a/comments.html
+++ b/comments.html
@@ -288,7 +288,6 @@
                         </div>
                         <div class="new-comment__form-column-center">
                             <label for="new-comment__textarea">Текст отзыва
-                                <br>
                                 <textarea name="form" id="new-comment__textarea" class="new-comment__textarea"
                                     placeholder="Введите сообщение"></textarea>
                             </label>
@@ -297,8 +296,8 @@
                             <div class="new-comment__form-column-bottom-left">
                                 Отображать фото в отзыве?
                                 <br>
-                                <label><input type="radio" name="1"> Да</label>
-                                <label><input type="radio" name="1"> Нет</label>
+                                <label><input type="radio" name="1" class="new-comment__button-label"> Да</label>
+                                <label><input type="radio" name="1" class="new-comment__button-label"> Нет</label>
                             </div>
                             <div class="new-comment__form-column-bottom-right">
                                 <button type="submit" class="new-comment__form-button">
