--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <!-- start maincontent -->
             <div class="maincontent">
                 <!-- start container -->
-                <div class="container сontainer--maincontent">
+                <div class="container container--maincontent">
                     <!-- start sidebar -->
                     <aside class="aside">
                         <nav class="navigation">
