--- a/team.html
+++ b/team.html
@@ -21,7 +21,7 @@
     <!-- start wrapper -->
     <div class="wrapper">
         <!-- start wrapper content -->
-        <a class="wrapper__content">
+        <div class="wrapper__content">
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
@@ -316,8 +316,8 @@
 
             </div>
             <!-- end maincontent -->
-
-    </div>
+        </div>
+    <!-- </div> -->
     <!-- end wrapper content -->
     <!-- start footer -->
     <footer class="footer">
